3rd version. Fixed text align

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- "Footer" -->
     <div class="footer">
-      <p>&copy; Excursion</p>
+      <p style="text-align:right;">&copy; Excursion</p>
     </div>
 
   </body>
